Bug 1400432 - Fix crash in nsImapCancelProxy::Run(). r=mkmelin